--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,19 @@
+body {
+  background-color: #fbe2dc;
+  font-family: "Poppins", sans-serif;
+  color: #333;
+}
+
+a {
+  color: #6b559f;
+}
+
 .App-logo {
   max-width: 400px;
   display: block;
   margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .App-header {
