--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@ a {
   color: #6b559f;
 }
 
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .App-logo {
   max-width: 400px;
   display: block;
